Special Thanks to Jennifer Rosenburg for the new logo and icons!
New features: Packaging a local directory as a PBI, allow building 32-bit PBI's on a 64-bit system, advanced scripting support for PBI modules, complete XDG desktop/menu/mime support for modules, and switch to full optionsNG for PBI build options.

APR 24, 2013:
EasyPBI version 2.1 is tagged!
Changes include: Combine the FreeBSD ports dialog into the EasyPBI Settings dialog, use portsnap for all FreeBSD ports fetching and updating, added the ability to flag xdg entries as requiring root, make all the "save" buttons dynamically enabled as appropriate. 

DEC 16, 2013:
EasyPBI version 2.2 is tagged!
NOTE: This version requires the 10.x version of the PBI manager to build PBI's (included in PC-BSD 10.x).
Changes include: Update to work with the 10.x version of the PBI manager backend. This includes moving from using the FreeBSD ports tree to using pkgNG packages for information and building (so the FreeBSD ports tree is no longer necessary). This slims down the EasyPBI options/interface quite a bit, so a fair number of options have been removed. Packaging a local PBI is now standardized by simply creating a custom FreeBSD package on your system first, then use EasyPBI to re-package it as a PBI.

FEB 18, 2014:
EasyPBI version 2.3 is tagged!
Changes include: Add ability for EasyPBI to build PBI's directly from ports again. Add item that shows current package compilation options. Add in option to set port-build compilation options and extra build dependencies (not used for packages). Add ability to create a new module from either ports or packages. Clean up a bug in the default wrapper script for 10.x PBI's.

MAY 20, 2014:
EasyPBI version 2.4 is tagged!
Changes include: Update to work with PBING format. This means that all *.pbi file building is removed, as well as all configuration options related to it. Also add support for a few new configuration options (plugins, screenshots, similar applications).